test/sema/typeck/module/global-not-accessible.dora
fn f(): Int32 { foo::x }
mod foo { let x: Int32 = 1i32; }
